# android-platform-sandbox

./: .gitignore  Options.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mediaplatform/app/: AudioVisualizerView.kt  MainActivity.kt
app/src/main/java/com/spotify/platform/app/: MainActivity.kt
app/src/main/res/drawable/: bg_filter_badge.xml  bg_future_tile.xml  bg_glass_panel.xml  bg_meter_fill.xml  bg_meter_track.xml  bg_metric_pill.xml  bg_scrim_bottom.xml  progress_sound_meter.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: architecture.md  lifecycle.md  module-rules.md
features/audio/: build.gradle.kts
features/audio/src/main/java/com/mediaplatform/audio/: AudioFeature.kt
features/camera/: build.gradle.kts
features/camera/src/main/java/com/mediaplatform/camera/: CameraFeature.kt
features/filters/: build.gradle.kts
features/filters/src/main/java/com/mediaplatform/filters/: FilterType.kt  FiltersFeature.kt
features/playback/: build.gradle.kts
features/playback/src/main/java/com/mediaplatform/playback/: PlaybackFeature.kt
features/playback/src/test/java/com/mediaplatform/playback/: PlaybackFeatureTest.kt
native/core-engine/: build.gradle.kts
native/core-engine/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  engine.cpp  engine.h  image_filter.cpp  image_filter.h  playback_state.cpp  playback_state.h
platform/core/: build.gradle.kts
platform/core/src/main/java/com/mediaplatform/core/: Disposable.kt  Result.kt
platform/core/src/test/java/com/mediaplatform/core/: ResultTest.kt
platform/native-bridge/: build.gradle.kts
platform/native-bridge/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.h
platform/native-bridge/src/main/java/com/mediaplatform/nativebridge/: AudioProcessorEngine.kt  ImageProcessorEngine.kt  NativeEngine.kt
platform/services/: build.gradle.kts
platform/services/src/main/java/com/mediaplatform/services/: PlatformService.kt  ServiceRegistry.kt
platform/state/: build.gradle.kts
tools/dependency-checker/: check_dependencies.py
(+12 files in other folders)
